# Synexis

./: .gitignore  Dockerfile  README.md  agent.py  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_agent.py
server/: app.py  environment.py
